Changed Link Issues

--- a/pages/Intro_To_Web_Development/IntrotoJS.mdx
+++ b/pages/Intro_To_Web_Development/IntrotoJS.mdx
@@ -9,7 +9,8 @@ import { Cards, Card } from 'nextra/components'
 ### As of currently, the **Intro to JavaScript** page is still under development. Check out our **Intro to HTML** and **Intro to CSS** pages!
 
 <Cards>
-<Card title="Intro to HTML" target="_self" href="https://curly-fiesta-pjj4w69wr95x3rj45-3000.app.github.dev/Intro_To_Web_Development/IntrotoHTML" />
-<Card title="Intro to CSS" target="_self" href="https://curly-fiesta-pjj4w69wr95x3rj45-3000.app.github.dev/Intro_To_Web_Development/IntrotoCSS" />
+
+<Card title="Intro to HTML" target="_self" href="../Intro_To_Web_Development/IntrotoHTML" />
+<Card title="Intro to CSS" target="_self" href="../Intro_To_Web_Development/IntrotoCSS" />
 
 </Cards>
